--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "pathfinder-ui": "^1.0.3"
   }
 }
